Fix Margin on mobile

--- a/src/styles/_ending.scss
+++ b/src/styles/_ending.scss
@@ -17,5 +17,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 0px;
+    margin: 20px;
+}
+
+.ending__message p, .ending__message h1 {
+    text-align: center;
 }
