--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -190,7 +190,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px 0px;
+  margin: 20px;
+}
+
+.ending__message p, .ending__message h1 {
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
